--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
  Theme Name:   Espartadigital Child Theme
- Theme URI:    https://espartadigital.com
+ Theme URI:    https://github.com/esparta-digital/espartadigital-child-theme
  Description:  Child of espartadigital.com
  Author:       Esparta Digital
- Author URI:   https://www.espartadigital.com
+ Author URI:   https://github.com/esparta-digital
  Template:     espartadigital
  Version:      1.0.0
  License:      GNU General Public License v2 or later
