--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:  Child of espartadigital.com
  Author:       Esparta Digital
  Author URI:   https://github.com/esparta-digital
- Template:     espartadigital
+ Template:     espartadigital-theme-main
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
